# DepartMentMangement

DepartmentManagement/: CMakeLists.txt  CMakeLists.txt.user.85f6f50  CMakeLists.txt.user.ebb5c54  civild.cpp  civild.h  civild.ui  civildp.cpp  civildp.h  civildp.ui  civilview.cpp  civilview.h  civilview.ui  computerdp.cpp  computerdp.h  computerdp.ui  electricaldp.cpp  electricaldp.h  electricaldp.ui  electricalview.cpp  electricalview.h  electricalview.ui  electronicdp.cpp  electronicdp.h  electronicdp.ui  electronicview.cpp  electronicview.h  electronicview.ui  itdp.cpp  itdp.h  itdp.ui  itview.cpp  itview.h  itview.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mechanicaldp.cpp  mechanicaldp.h  mechanicaldp.ui  (+6 more)
DepartmentManagement/Dbase/: CMakeLists.txt  db.cpp  db.h
